--- a/src/main/resources/com/example/hospitalmanagementsystem/login.fxml
+++ b/src/main/resources/com/example/hospitalmanagementsystem/login.fxml
@@ -1,22 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane layoutX="-8.0" layoutY="-6.0" prefHeight="411.0" prefWidth="615.0" />
-      <AnchorPane layoutX="2.0" layoutY="4.0" prefHeight="400.0" prefWidth="600.0">
+      <AnchorPane layoutX="2.0" layoutY="-6.0" prefHeight="411.0" prefWidth="614.0" styleClass="basicAnchorPane" stylesheets="@styles.css">
          <children>
-            <TextField layoutX="233.0" layoutY="163.0" promptText="login" />
-            <PasswordField layoutX="233.0" layoutY="212.0" promptText="password" />
-            <Button layoutX="273.0" layoutY="265.0" mnemonicParsing="false" text="Submit" />
-            <Hyperlink alignment="CENTER" layoutX="223.0" layoutY="316.0" prefHeight="23.0" prefWidth="170.0" text="create a new account" />
-            <AnchorPane layoutX="-6.0" layoutY="-13.0" prefHeight="411.0" prefWidth="132.0" styleClass="colorAnchorPane" stylesheets="@styles.css" />
-            <AnchorPane layoutX="468.0" layoutY="-13.0" prefHeight="411.0" prefWidth="132.0" styleClass="colorAnchorPane" stylesheets="@styles.css" />
+            <TextField layoutX="233.0" layoutY="175.0" promptText="login" styleClass="textField" stylesheets="@styles.css" />
+            <PasswordField layoutX="233.0" layoutY="212.0" promptText="password" styleClass="textField" stylesheets="@styles.css" />
+            <Button layoutX="283.0" layoutY="262.0" mnemonicParsing="false" styleClass="colorButton" stylesheets="@styles.css" text="Submit" />
+            <Hyperlink alignment="CENTER" layoutX="225.0" layoutY="307.0" prefHeight="23.0" prefWidth="170.0" text="create a new account">
+               <font>
+                  <Font name="Century" size="14.0" />
+               </font></Hyperlink>
+            <AnchorPane layoutX="-6.0" layoutY="-13.0" prefHeight="428.0" prefWidth="149.0" styleClass="colorAnchorPane" stylesheets="@styles.css">
+               <children>
+                  <ImageView fitHeight="425.0" fitWidth="156.0" layoutX="3.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/hospitalLeft.jpg" />
+                     </image>
+                  </ImageView>
+               </children></AnchorPane>
+            <AnchorPane layoutX="471.0" layoutY="-13.0" prefHeight="415.0" prefWidth="142.0" styleClass="colorAnchorPane" stylesheets="@styles.css">
+               <children>
+                  <ImageView fitHeight="424.0" fitWidth="149.0" layoutX="-4.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/hospitaRight.jpg" />
+                     </image>
+                  </ImageView>
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="73.0" layoutY="22.0" mnemonicParsing="false" textFill="WHITE">
+                     <graphic>
+                        <FontAwesomeIconView fill="#bc6994" glyphName="CLOSE" textAlignment="CENTER" wrappingWidth="25.428571701049805" />
+                     </graphic>
+                  </Button>
+               </children></AnchorPane>
+            <FontAwesomeIconView fill="#69b8d0" glyphName="USER" layoutX="288.0" layoutY="116.0" size="45" wrappingWidth="38.14285659790039" />
+            <Label alignment="CENTER" layoutX="237.0" layoutY="131.0" prefHeight="25.0" prefWidth="145.0" text="DM Hospital" textFill="WHITE">
+               <font>
+                  <Font name="Century" size="20.0" />
+               </font>
+            </Label>
+            <Hyperlink layoutX="156.0" layoutY="379.0" prefHeight="23.0" prefWidth="125.0" text="\@ Linkedin" />
+            <Hyperlink layoutX="156.0" layoutY="356.0" prefHeight="23.0" prefWidth="188.0" text="\@ GitHub Doublematt" />
          </children>
       </AnchorPane>
    </children>
