Create account form, exit button Created create account form and two functions changePane (login, create account) and exit ( exitButton + alt F4)

--- a/src/main/resources/com/example/hospitalmanagementsystem/styles.css
+++ b/src/main/resources/com/example/hospitalmanagementsystem/styles.css
@@ -13,7 +13,7 @@
 .textField {
     -fx-background-color: "white";
     -fx-background-radius: 7px;
-    -fx-border-color: linear-gradient( to bottom right, "grey", "white");
+    -fx-border-color: #fff;
     -fx-border-radius: 7px;
     -fx-text-inner-color:#000;
 }
