--- a/src/main/resources/com/example/hospitalmanagementsystem/login.fxml
+++ b/src/main/resources/com/example/hospitalmanagementsystem/login.fxml
@@ -53,7 +53,7 @@
             <Hyperlink fx:id="githubLink" layoutX="156.0" layoutY="356.0" onAction="#openLink" prefHeight="23.0" prefWidth="188.0" styleClass="colorHyperLink" stylesheets="@styles.css" text="\@ GitHub Doublematt" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="createAccountPane" prefHeight="411.0" prefWidth="614.0" styleClass="basicAnchorPane" stylesheets="@styles.css" visible="false">
+      <AnchorPane fx:id="createAccountPane" prefHeight="411.0" prefWidth="614.0" styleClass="basicAnchorPane" stylesheets="@styles.css">
          <children>
             <TextField fx:id="regEmailField" layoutX="233.0" layoutY="89.0" promptText="email" styleClass="textField" stylesheets="@styles.css" />
             <TextField fx:id="regLoginField" layoutX="233.0" layoutY="123.0" promptText="login" styleClass="textField" stylesheets="@styles.css" />
@@ -61,7 +61,7 @@
             <PasswordField fx:id="regConfirmPasswordField" layoutX="233.0" layoutY="195.0" promptText="confirm password" styleClass="textField" stylesheets="@styles.css" />
             <TextField fx:id="regFirstNameField" layoutX="233.0" layoutY="231.0" promptText="first name" styleClass="textField" stylesheets="@styles.css" />
             <TextField fx:id="regLastNameField" layoutX="233.0" layoutY="267.0" promptText="last name" styleClass="textField" stylesheets="@styles.css" />
-            <Button layoutX="259.0" layoutY="310.0" mnemonicParsing="false" styleClass="colorButton" stylesheets="@styles.css" text="Create account" />
+            <Button layoutX="259.0" layoutY="310.0" mnemonicParsing="false" onAction="#registerNewUser" styleClass="colorButton" stylesheets="@styles.css" text="Create account" />
             <Hyperlink fx:id="loginLink" alignment="CENTER" layoutX="222.0" layoutY="351.0" onAction="#changePane" prefHeight="23.0" prefWidth="170.0" styleClass="colorHyperLink" stylesheets="@styles.css" text="log in into account">
                <font>
                   <Font name="Century" size="14.0" />
