--- a/src/main/resources/com/example/hospitalmanagementsystem/dashboard.fxml
+++ b/src/main/resources/com/example/hospitalmanagementsystem/dashboard.fxml
@@ -1,8 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="712.0" prefWidth="1087.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hospitalmanagementsystem.Controllers.DashboardController">
-
+   <children>
+      <AnchorPane fx:id="menuPane" layoutX="-12.0" layoutY="99.0" prefHeight="615.0" prefWidth="167.0" styleClass="menuPane" stylesheets="@CSSstyles/dashboardStyles.css" />
+      <Label layoutX="216.0" layoutY="71.0" prefHeight="57.0" prefWidth="400.0" text="Dashboard" textFill="#868ca1">
+         <font>
+            <Font name="Century" size="45.0" />
+         </font>
+      </Label>
+      <Circle fill="#eeeeee" layoutX="1030.0" layoutY="52.0" radius="37.0" stroke="BLACK" strokeType="INSIDE" />
+      <Button layoutX="989.0" layoutY="668.0" mnemonicParsing="false" text="EXIT">
+         <graphic>
+            <FontAwesomeIconView glyphName="CLOSE" textAlignment="CENTER" wrappingWidth="28.0" />
+         </graphic>
+      </Button>
+      <AnchorPane layoutX="222.0" layoutY="176.0" prefHeight="222.0" prefWidth="344.0" styleClass="contentPane" stylesheets="@CSSstyles/dashboardStyles.css" />
+      <AnchorPane layoutX="632.0" layoutY="176.0" prefHeight="222.0" prefWidth="344.0" styleClass="contentPane" stylesheets="@CSSstyles/dashboardStyles.css" />
+      <AnchorPane layoutX="222.0" layoutY="446.0" prefHeight="222.0" prefWidth="758.0" styleClass="contentPane" stylesheets="@CSSstyles/dashboardStyles.css" />
+   </children>
 </AnchorPane>
