--- a/src/main/resources/com/example/hospitalmanagementsystem/dashboard.fxml
+++ b/src/main/resources/com/example/hospitalmanagementsystem/dashboard.fxml
@@ -3,6 +3,8 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
@@ -23,6 +25,23 @@
       </Button>
       <AnchorPane layoutX="222.0" layoutY="176.0" prefHeight="222.0" prefWidth="344.0" styleClass="contentPane" stylesheets="@CSSstyles/dashboardStyles.css" />
       <AnchorPane layoutX="632.0" layoutY="176.0" prefHeight="222.0" prefWidth="344.0" styleClass="contentPane" stylesheets="@CSSstyles/dashboardStyles.css" />
-      <AnchorPane layoutX="222.0" layoutY="446.0" prefHeight="222.0" prefWidth="758.0" styleClass="contentPane" stylesheets="@CSSstyles/dashboardStyles.css" />
+      <AnchorPane layoutX="222.0" layoutY="446.0" prefHeight="222.0" prefWidth="758.0" styleClass="contentPane" stylesheets="@CSSstyles/dashboardStyles.css">
+         <children>
+            <ImageView fx:id="newsImage2" fitHeight="134.0" fitWidth="227.0" layoutX="273.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/genes.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="newsImage1" fitHeight="128.0" fitWidth="258.0" layoutX="15.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/drug.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="newsImage3" fitHeight="126.0" fitWidth="232.0" layoutX="500.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/coat.png" />
+               </image>
+            </ImageView>
+         </children></AnchorPane>
    </children>
 </AnchorPane>
